k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maven-web-app
  namespace: cp4i
spec:
  selector:
    app: maven-web-app
  ports:
    - port: 8080
      targetPort: 8080
